Allow to "Go to" a category from right-click menu

BUG: 438973